# byteparsing

./: .gitignore  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  NOTICE  README.md  README.rst  project_setup.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cffconvert.yml  draft-pdf.yml  python-package.yml
byteparsing/: __init__.py  array.py  cursor.py  decorator.py  failure.py  openfoam.py  parsers.py  trampoline.py
docs/: .buildinfo  Makefile  advanced.html  advanced.ipynb  api.html  architecture.html  architecture.ipynb  conf.py  cursors.html  cursors.ipynb  examples.html  examples.ipynb  functional-2.html  functional.html  functional.ipynb  genindex.html  grammar.html  grammar.ipynb  index.html  index.rst  install.html  install.ipynb  objects.inv  openfoam.html  parsers.html  parsers.ipynb  ply.html  ppm.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.rst.txt  architecture.md.txt  cursors.ipynb.txt  examples.ipynb.txt  functional.ipynb.txt  index.rst.txt  install.ipynb.txt  openfoam.md.txt  ply.ipynb.txt
docs/_static/: stanford_bunny.html  stanford_bunny.ply
docsrc/: Makefile  api.rst  architecture.ipynb  architecture.md  conf.py  entangled.dhall  examples.ipynb  functional-2.md  functional.ipynb  grammar.ipynb  index.rst  make.bat  parser-grammar.md  parsers.ipynb  ply.ipynb  ppm.ipynb  python-logo.ppm  ref.bib
paper/: Makefile  paper.bib  paper.md
paper/misc/: requirements.md  submissionform.md
tests/: test_array.py  test_byteparsing.py  test_cursor.py  test_decorator.py  test_email.py  test_lint.py  test_openfoam.py  test_parsers.py  test_trampoline.py
tests/data/: ascii_scalar  ascii_vector  binary_scalar  binary_uniform  binary_vector
